reworked login style, fixed loading spinner on firefox

--- a/src/components/Login/GoogleButton/GoogleButton.scss
+++ b/src/components/Login/GoogleButton/GoogleButton.scss
@@ -6,6 +6,10 @@
     align-content: center;
     padding: 4px;
     cursor: pointer;
+    background-color: $secondary;
+    border-radius: 8px;
+    margin-top: 20px;
+    justify-content: center;
 
 }
 
