--- a/src/components/Login/Login.scss
+++ b/src/components/Login/Login.scss
@@ -4,7 +4,7 @@
 
     width: 100%;
     height: 2px;
-    background-color: $primary;
+    background-color: $secondary;
     border: none;
 }
 
@@ -12,6 +12,8 @@
     align-content: center;
     justify-content: center;
     margin: 0;
+    background-color: transparent;
+    border: none;
 
     
 }
@@ -19,5 +21,5 @@
 .AdminText{
     text-align: center;
     margin-top:-10px;
-    color: $primary;
+    color: $secondary;
 }
